[gd_scene load_steps=73 format=2]

[ext_resource path="res://assets/environment/interactive/mach_kein_auge_shoot.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/player/05_ss_player_shoot_05.png" type="Texture" id=2]
[ext_resource path="res://src/Projectiles/Bullet.gd" type="Script" id=3]
[ext_resource path="res://assets/characters/player/05_ss_player_shoot_07.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.4553

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1400, 450, 200 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 1400, 450, 200 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 1400, 450, 200 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 1400, 450, 200 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 0, 450, 200 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 200, 450, 200 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 400, 450, 200 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 600, 450, 200 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 800, 450, 200 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 1000, 450, 200 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 1200, 450, 200 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1400, 450, 200 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 1400, 450, 200 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 1400, 450, 200 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 1400, 450, 200 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "shot1",
"speed": 20.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "shot2",
"speed": 20.0
} ]

[sub_resource type="CanvasItemMaterial" id=67]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 8
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=68]
flag_disable_z = true
direction = Vector3( 10, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
anim_speed = 1.0

[node name="Bullet" type="Area2D" groups=[
"Bullets",
]]
collision_layer = 64
collision_mask = 65538
script = ExtResource( 3 )
speed = 30

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 66 )
animation = "shot1"
frame = 3

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 67 )
rotation = -3.14159
amount = 1
process_material = SubResource( 68 )
texture = ExtResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
